Fixed font spacing

--- a/dashboard/src/app/globals.css
+++ b/dashboard/src/app/globals.css
@@ -202,7 +202,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    @apply tracking-wide;
+    @apply tracking-normal;
     font-family: var(--font-roboto-sans);
     background-color: var(--background);
   }
